# animalDonor

./: Dockerfile  docker-compose.dev.yml  docker-compose.yml  main.py  matching.txt  nginx_config.conf  pyproject.toml  requirements.txt  settings.py
api/: dependencies.py
api/routers/: __init__.py  auth.py  example.py  pet_type.py  pets.py  search_card.py  social_network.py  social_network_type.py  telegram.py  unavailable_list.py  users.py  vaccination.py
api/schemas/: auth.py  example.py  pet_type.py  pets.py  search_card.py  social_network.py  social_network_type.py  telegram.py  unavailable_list.py  users.py  vaccination.py
build_react/: asset-manifest.json  index.html
build_react/static/css/: main.455399f8.css  main.455399f8.css.map  main.be36519f.css  main.be36519f.css.map  main.c3a292c5.css  main.c3a292c5.css.map
build_react/static/js/: main.5139ba36.js  main.5139ba36.js.map  main.822679b7.js  main.822679b7.js.LICENSE.txt  main.822679b7.js.map  main.a35b8b87.js  main.a35b8b87.js.LICENSE.txt  main.a35b8b87.js.map  main.c0e1ee74.js  main.c0e1ee74.js.map
database/: base.py
database/migrations/: env.py
database/migrations/versions/: 304703c87b3c_update_some_tables_idk.py  (+8 more)
database/models/: __init__.py  donation.py  pet.py  pet_type.py  search_card.py  service_token.py  social_network.py  social_network_type.py  telegram_link_request.py  unavailable_list.py  user.py  vaccination.py
services/: pet_type.py  pets.py  search_card.py  service_token.py  social_network_type.py  telegram_link_request.py  users.py
utils/: matching.py  security.py
